Added Friend Requests.

--- a/config.ini
+++ b/config.ini
@@ -3,7 +3,7 @@
 db_host = localhost
 db_name = fusion
 db_username = root
-db_password = BnbZ6FQ8eWtgENp7kc3u9m
+db_password = 
 
 # Database Table Names
 db_table_users = users
